Disable autocomplete in "setup.html" [1.1.1]

--- a/templates/setup.html
+++ b/templates/setup.html
@@ -13,10 +13,10 @@
         <h1>Setup</h1>
         <form method="post" enctype="multipart/form-data">
             <label for="app-url">App URL</label>
-            <input type="url" id="app-url" name="app-url" required>
+            <input type="url" id="app-url" name="app-url" autocomplete="off" required>
 
             <label for="default-url-length">Default URL length</label>
-            <input type="number" id="default-url-length" name="default-url-length" required>
+            <input type="number" id="default-url-length" name="default-url-length" autocomplete="off" required>
 
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
