--- a/static/css/setup-styles.css
+++ b/static/css/setup-styles.css
@@ -38,6 +38,7 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="number"],
+input[type="checkbox"],
 textarea {
     border: 1px solid #E3E3D5;
     background-color: #E3E3D5;
