--- a/templates/setup.html
+++ b/templates/setup.html
@@ -18,11 +18,17 @@
             <label for="default-url-length">Default URL length</label>
             <input type="number" id="default-url-length" name="default-url-length" autocomplete="off" required>
 
+            <label for="enable-authentication">Enable authentication</label>
+            <input type="checkbox" id="enable-authentication" name="enable-authentication">
+
+            <div id="password" class="tab-content">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password">
+            </div>
 
             <button type="submit">Setup</button>
         </form>
     </div>
+    <script src="{{ url_for('static', filename='js/setup-scripts.js') }}"></script>
 </body>
 </html>
