--- a/templates/setup.html
+++ b/templates/setup.html
@@ -13,7 +13,7 @@
         <h1>Setup</h1>
         <form method="post" enctype="multipart/form-data">
             <label for="app-url">App URL</label>
-            <input type="url" id="app-url" name="app-url" autocomplete="off" required>
+            <input type="url" id="app-url" name="app-url" autocomplete="off" value="{{ app_url }}" required>
 
             <label for="default-url-length">Default URL length</label>
             <input type="number" id="default-url-length" name="default-url-length" autocomplete="off" required>
