Full link with "http://" isn't required when shortening link [1.3.2]

--- a/templates/shorten-url.html
+++ b/templates/shorten-url.html
@@ -18,7 +18,7 @@
         {% endif %}
         <form method="post" enctype="multipart/form-data">
             <label for="url">URL</label>
-            <input type="url" id="url" name="url" autocomplete="off" required>
+            <input type="text" id="url" name="url" autocomplete="off" required>
 
             <label for="custom-short-url">Custom short URL</label>
             <input type="text" id="custom-short-url" name="custom-short-url" autocomplete="off">
