--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shorten This</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index-styles.css') }}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.png') }}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>ShortenThis</title>
+    <link rel="icon" type="image/x-icon" sizes="2000x2000" href="{{ url_for('static', filename='/assets/img/favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/assets/bootstrap/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/assets/css/bs-theme-overrides.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/assets/css/styles.css') }}">
 </head>
-<body>
-    <div class="container">
-        <h1>Shorten This</h1>
-        {% if not disable_authentication %}
-        <button><a href="/login">Login</a></button>
-        {% endif %}
-        {% if disable_authentication %}
-        <button><a href="/shorten-url">Shorten URL</a></button>
-        {% endif %}
-        <a href="https://github.com/jedrzejme/ShortenThis" target="_blank" style="font-style: italic;"><div class="footer">Show GitHub project</div></a>
+
+<body style="background: #1c1c1c;">
+    <section class="py-4 py-xl-5">
+        <div class="container" style="color: rgb(255,255,255);">
+            <div class="text-center p-4 p-lg-5">
+                <p class="fw-bold mb-2" style="color: rgb(255,138,0);border-color: #ff8a00;">Home</p>
+                <h1 class="fw-bold mb-4" style="font-family: 'Roboto';">Shorten This</h1>
+            </div>
+        </div>
+    </section>
+    <div class="container" style="width: 30em;background: #434343;border-radius: 1em;max-width: 100vw;">
+        <div style="padding: 1em;">{% if not disable_authentication %}
+            <div style="margin-bottom: 1vw;margin-top: 1vw;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/login"><strong>Login</strong></a></div>
+                </div>
+            </div>{% endif %}{% if disable_authentication %}
+            <div style="margin-bottom: 1vw;margin-top: 1vw;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/shorten-url"><strong>Shorten URL</strong></a></div>
+                </div>
+            </div>{% endif %}
+            <div style="margin-top: 1vw;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a href="https://github.com/jedrzejme/ShortenThis" style="color: rgba(13,110,253,0);" target="_blank">
+                            <p class="fw-lighter" style="color: rgb(255,255,255);"><em>Show GitHub project</em></p>
+                        </a></div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="{{ url_for('static', filename='/assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='/assets/js/setup-scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='/assets/js/shorten-url-scripts.js') }}"></script>
 </body>
+
 </html>
