--- a/templates/index.html
+++ b/templates/index.html
@@ -24,17 +24,17 @@
     </section><!-- End: Banner Clean -->
     <div class="container" style="width: 30em;background: #434343;border-radius: 1em;max-width: 100vw;">
         <div style="padding: 1em;">{% if not disable_authentication %}
-            <div style="margin-bottom: 1vw;margin-top: 1vw;">
+            <div style="margin-bottom: 1em;margin-top: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/login"><strong>Login</strong></a></div>
                 </div>
             </div>{% endif %}{% if disable_authentication %}
-            <div style="margin-bottom: 1vw;margin-top: 1vw;">
+            <div style="margin-bottom: 1em;margin-top: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/shorten-url"><strong>Shorten URL</strong></a></div>
                 </div>
             </div>{% endif %}
-            <div style="margin-top: 1vw;">
+            <div style="margin-top: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a href="https://github.com/jedrzejme/ShortenThis" style="color: rgba(13,110,253,0);" target="_blank">
                             <p class="fw-lighter" style="color: rgb(255,255,255);"><em>Show GitHub project</em></p>
