--- a/templates/setup.html
+++ b/templates/setup.html
@@ -24,7 +24,7 @@
     </section><!-- End: Banner Clean -->
     <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;">
         <form style="padding: 1em;" method="post" enctype="multipart/form-data">
-            <div style="margin-bottom: 1vw;">
+            <div style="margin-bottom: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="app-url">App URL</label></div>
                 </div>
@@ -32,7 +32,7 @@
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="text" id="app-url" autocomplete="off" name="app-url" value="{{ app_url }}" required=""></div>
                 </div>
             </div>
-            <div style="margin-top: 1vw;margin-bottom: 1vw;">
+            <div style="margin-top: 1em;margin-bottom: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="default-url-length">Default URL length</label></div>
                 </div>
@@ -40,7 +40,7 @@
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="number" id="default-url-length" name="default-url-length" required=""></div>
                 </div>
             </div>
-            <div style="margin-top: 1vw;margin-bottom: 1vw;">
+            <div style="margin-top: 1em;margin-bottom: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="enable-authentication">Enable authentication</label></div>
                 </div>
@@ -48,7 +48,7 @@
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input type="checkbox" id="enable-authentication" name="enable-authentication"></div>
                 </div>
             </div>
-            <div id="password-div" style="margin-top: 1vw;margin-bottom: 1vw;">
+            <div id="password-div" style="margin-top: 1em;margin-bottom: 1em;">
                 <div class="row">
                     <div class="col d-flex justify-content-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="password">Password</label></div>
                 </div>
@@ -56,7 +56,7 @@
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="password" id="password" name="password"></div>
                 </div>
             </div>
-            <div style="margin-top: 1vw;">
+            <div style="margin-top: 1em;">
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><button class="btn btn-primary" type="submit" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;"><strong>Setup</strong></button></div>
                 </div>
