Improve input of default URL length [2.0.5]

--- a/templates/setup.html
+++ b/templates/setup.html
@@ -37,7 +37,7 @@
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="default-url-length">Default URL length</label></div>
                 </div>
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="number" id="default-url-length" name="default-url-length" required=""></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="number" id="default-url-length" name="default-url-length" min="1" step="1" required=""></div>
                 </div>
             </div>
             <div style="margin-top: 1em;margin-bottom: 1em;">
