Add padding to containers [2.0.6]

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </section><!-- End: Banner Clean -->
-    <div class="container" style="width: 30em;background: #434343;border-radius: 1em;max-width: 100vw;">
+    <div class="container" style="width: 30em;background: #434343;border-radius: 1em;max-width: 100vw;padding: 1em;">
         <div style="padding: 1em;">{% if not disable_authentication %}
             <div style="margin-bottom: 1em;margin-top: 1em;">
                 <div class="row">
