--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </section><!-- End: Banner Clean -->
-    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;">
+    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;padding: 1em;">
         <form style="padding: 1em;" enctype="multipart/form-data" method="post">
             <div style="margin-bottom: 1em;">
                 <div class="row">
