--- a/templates/shorten-url.html
+++ b/templates/shorten-url.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </section><!-- End: Banner Clean -->
-    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;">
+    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;padding: 1em;">
         <form style="padding: 1em;" method="post" enctype="multipart/form-data">
             <div style="margin-bottom: 1em;">
                 <div class="row">
@@ -47,7 +47,7 @@
             </div>
         </form>
     </div>{% if shortened_url %}
-    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;margin-top: 1em;">
+    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;margin-top: 1em;padding: 1em;">
         <div style="padding: 1em;">
             <div class="row">
                 <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center">
