Change way of data management to database, UI upgrade [3.0.0]
· change way of data management from configparser to database
· change of page for creating link, add stats and information about links, add option to delete link

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ShortenThis</title>
+    <title>Shorten This</title>
     <link rel="icon" type="image/x-icon" sizes="2000x2000" href="{{ url_for('static', filename='assets/img/favicon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap">
@@ -25,6 +25,12 @@
     <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;padding: 1em;">
         <form style="padding: 1em;" enctype="multipart/form-data" method="post">
             <div style="margin-bottom: 1em;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="username">Username</label></div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="text" id="username" name="username"></div>
+                </div>
                 <div class="row">
                     <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="password">Password</label></div>
                 </div>
