--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ShortenThis</title>
+    <title>Shorten This</title>
     <link rel="icon" type="image/x-icon" sizes="2000x2000" href="{{ url_for('static', filename='assets/img/favicon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap">
@@ -31,7 +31,7 @@
             </div>{% endif %}{% if disable_authentication %}
             <div style="margin-bottom: 1em;margin-top: 1em;">
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/shorten-url"><strong>Shorten URL</strong></a></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/control-panel"><strong>Shorten URL</strong></a></div>
                 </div>
             </div>{% endif %}
             <div style="margin-top: 1em;">
