Add settings screen in control panel [4.0.0]

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             </div>{% endif %}{% if disable_authentication %}
             <div style="margin-bottom: 1em;margin-top: 1em;">
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/control-panel"><strong>Shorten URL</strong></a></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><a class="btn btn-primary" role="button" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;" href="/control-panel?section=urls"><strong>Shorten URL</strong></a></div>
                 </div>
             </div>{% endif %}
             <div style="margin-top: 1em;">
