--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -22,12 +22,14 @@
                 <h1 class="fw-bold mb-4" style="font-family: 'Roboto';">Shorten This</h1>
             </div>
         </div>
-    </section><!-- End: Banner Clean -->
+    </section><!-- End: Banner Clean -->{% if section == "urls" %}
     <div class="container" style="background: #434343;border-radius: 1em;padding: 1em;">
         <div class="row">
             <div class="col">
-                <p class="fw-lighter" style="margin-bottom: 0;"><span style="color: rgb(255, 255, 255);">Hello,</span> <strong>{{ username }}</strong><span style="color: rgb(255, 255, 255);">!</span></p>
-            </div>{% if not enable_authentication %}
+                <p class="fw-lighter" style="margin-bottom: 0;"><span style="color: rgb(255, 255, 255);">Hello,</span> <strong>{{ username }}</strong><span style="color: rgb(255, 255, 255);">!</span></p>{% if not disable_authentication %}<a href="/control-panel?section=settings" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Settings</p>
+                </a>{% endif %}
+            </div>{% if not disable_authentication %}
             <div class="col text-end"><a class="btn btn-primary" role="button" id="logout" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
         </div>
         <div class="row">
@@ -104,14 +106,39 @@
                 <td style="background: rgb(67,67,67);color: rgb(255,255,255);">{{ url.date }}</td>
                 <td style="background: rgb(67,67,67);color: rgb(255,255,255);">{{ url.ip }}</td>
                 <td style="background: rgb(67,67,67);color: rgb(255,255,255);">{{ url.clicks }}</td>
-                <td style="background: rgb(67,67,67);color: rgba(255,255,255,0);"><a href="/control-panel/action?action=delete&amp;short_url={{ url.short_url }}" style="color: rgba(13,110,253,0);"><i class="far fa-trash-alt text-white d-flex d-xxl-flex justify-content-start justify-content-xxl-start" style="color: rgba(255,255,255,0);"></i></a></td>
+                <td style="background: rgb(67,67,67);color: rgba(255,255,255,0);"><a href="/control-panel/action?action=delete_url&amp;short_url={{ url.short_url }}" style="color: rgba(13,110,253,0);"><i class="far fa-trash-alt text-white d-flex d-xxl-flex justify-content-start justify-content-xxl-start" style="color: rgba(255,255,255,0);"></i></a></td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div></div>
         </div>
-    </div>
+    </div>{% endif %}{% if section == "settings" %}
+    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;padding: 1em;">
+        <form style="padding: 1em;" method="post" enctype="multipart/form-data">
+            <div style="margin-bottom: 1em;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="app-url">App URL</label></div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="text" id="app-url" autocomplete="off" name="app-url" value="{{ app_url }}" required=""></div>
+                </div>
+            </div>
+            <div style="margin-top: 1em;margin-bottom: 1em;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="default-url-length">Default URL length</label></div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="number" id="default-url-length" name="default-url-length" min="1" step="1" required="" value="{{ default_url_length }}"></div>
+                </div>
+            </div>
+            <div style="margin-top: 1em;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><button class="btn btn-primary" type="submit" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;"><strong>Submit settings</strong></button></div>
+                </div>
+            </div>
+        </form>
+    </div>{% endif %}
     <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/setup-scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/shorten-url-scripts.js') }}"></script>
