Add users screen in control panel [5.0.0]

--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -28,6 +28,8 @@
             <div class="col">
                 <p class="fw-lighter" style="margin-bottom: 0;"><span style="color: rgb(255, 255, 255);">Hello,</span> <strong>{{ username }}</strong><span style="color: rgb(255, 255, 255);">!</span></p>{% if not disable_authentication %}<a href="/control-panel?section=settings" style="color: rgba(13,110,253,0);">
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">Settings</p>
+                </a><a href="/control-panel?section=users" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Users</p>
                 </a>{% endif %}
             </div>{% if not disable_authentication %}
             <div class="col text-end"><a class="btn btn-primary" role="button" id="logout" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
@@ -138,6 +140,83 @@
                 </div>
             </div>
         </form>
+    </div>{% endif %}{% if section == "users" %}
+    <div class="container" style="background: #434343;border-radius: 1em;padding: 1em;">
+        <div class="row">
+            <div class="col">
+                <p class="fw-lighter" style="margin-bottom: 0;"><span style="color: rgb(255, 255, 255);">Hello,</span> <strong>{{ username }}</strong><span style="color: rgb(255, 255, 255);">!</span></p>{% if not disable_authentication %}<a href="/control-panel?section=urls" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">URLs</p>
+                </a><a href="/control-panel?section=settings" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Settings</p>
+                </a>{% endif %}
+            </div>{% if not disable_authentication %}
+            <div class="col text-end"><a class="btn btn-primary" role="button" id="logout-1" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
+        </div>
+        <div class="row">
+            <div class="col">
+                <form method="post">
+                    <div class="row">
+                        <div class="col">
+                            <div>
+                                <div class="row">
+                                    <div class="col d-flex d-xxl-flex justify-content-center"><label class="col-form-label" style="color: rgb(255,255,255);" for="username">Username</label></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center">
+                                        <!-- Start: username --><input class="form-control" type="text" id="username" autocomplete="off" required="" name="username"><!-- End: username -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div>
+                                <div class="row">
+                                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label" style="color: rgb(255,255,255);" for="password">Password</label></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center">
+                                        <!-- Start: password --><input class="form-control" type="password" id="password" name="password"><!-- End: password -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top: 1em;margin-bottom: 1em;">
+                        <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><button class="btn btn-primary" type="submit" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 5em;padding-right: 5em;"><strong>Add user</strong></button></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col"><div class="table-responsive" style="border-radius: 1em;margin-top: 1em;margin-bottom: 1em;">
+    <table class="table">
+        <thead>
+            <tr>
+                <th style="background: rgb(28,28,28);color: rgb(255,255,255);">Username</th>
+                <th style="background: rgb(28,28,28);color: rgb(255,255,255);">Permissions</th>
+                <th style="background: rgb(28,28,28);color: rgb(255,255,255);">Actions</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            {% for user in users %}
+            <tr>
+                <td style="background: rgb(67,67,67);color: rgb(255,255,255);">
+                    <p style="color: rgb(255,255,255);">{{ user.username }}</p>
+                </td>
+                <td style="background: rgb(67,67,67);color: rgb(255,255,255);">
+                    <p style="color: rgb(255,255,255);">{{ user.permissions }}</p>
+                </td>
+                <td style="background: rgb(67,67,67);color: rgba(255,255,255,0);">
+                    <div>{% if username == user.username %}</div><i class="far fa-trash-alt text-white-50 d-flex d-xxl-flex justify-content-start justify-content-xxl-start" style="color: rgba(255,255,255,0);"></i>
+                    <div>{% else %}</div><a href="/control-panel/action?action=delete_user&amp;username={{ user.username }}" style="color: rgba(13,110,253,0);"><i class="far fa-trash-alt text-white d-flex d-xxl-flex justify-content-start justify-content-xxl-start" style="color: rgba(255,255,255,0);"></i></a>
+                    <div>{% endif %}</div>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div></div>
+        </div>
     </div>{% endif %}
     <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/setup-scripts.js') }}"></script>
