--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -116,7 +116,17 @@
 </div></div>
         </div>
     </div>{% endif %}{% if section == "settings" %}
-    <div class="container" style="width: 50em;background: #434343;border-radius: 1em;max-width: 100vw;padding: 1em;">
+    <div class="container" style="background: #434343;border-radius: 1em;padding: 1em;">
+        <div class="row">
+            <div class="col">
+                <p class="fw-lighter" style="margin-bottom: 0;"><span style="color: rgb(255, 255, 255);">Hello,</span> <strong>{{ username }}</strong><span style="color: rgb(255, 255, 255);">!</span></p>{% if not disable_authentication %}<a href="/control-panel?section=urls" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">URLs</p>
+                </a><a href="/control-panel?section=users" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Users</p>
+                </a>{% endif %}
+            </div>{% if not disable_authentication %}
+            <div class="col text-end"><a class="btn btn-primary" role="button" id="logout-2" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
+        </div>
         <form style="padding: 1em;" method="post" enctype="multipart/form-data">
             <div style="margin-bottom: 1em;">
                 <div class="row">
@@ -218,6 +228,9 @@
 </div></div>
         </div>
     </div>{% endif %}
+    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center" style="margin: 1em;">
+        <p class="text-center" style="border-top-left-radius: 0.5em;border-top-right-radius: 0.5em;background: #434343;border-bottom-right-radius: 2em;border-bottom-left-radius: 2em;padding-top: 0.5em;padding-bottom: 0.5em;padding-right: 2em;padding-left: 2em;width: 82em;max-width: 100vw;"><span style="color: rgb(255, 255, 255);">Powered by</span> <a href="https://github.com/jedrzejme/ShortenThis" target="_blank">Shorten This</a> <span style="color: rgb(255, 255, 255);">created by</span> <a href="https://dev.jedrzej.me" target="_blank"><span style="color: rgb(235, 146, 39);">Jędrzej Bakalarski</span></a></p>
+    </div>
     <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/setup-scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/shorten-url-scripts.js') }}"></script>
