--- a/templates/login.html
+++ b/templates/login.html
@@ -45,6 +45,9 @@
             </div>
         </form>
     </div>
+    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center" style="margin: 1em;">
+        <p class="text-center" style="border-top-left-radius: 0.5em;border-top-right-radius: 0.5em;background: #434343;border-bottom-right-radius: 2em;border-bottom-left-radius: 2em;padding-top: 0.5em;padding-bottom: 0.5em;padding-right: 2em;padding-left: 2em;width: 50em;max-width: 100vw;"><span style="color: rgb(255, 255, 255);">Powered by</span> <a href="https://github.com/jedrzejme/ShortenThis" target="_blank">Shorten This</a> <span style="color: rgb(255, 255, 255);">created by</span> <a href="https://dev.jedrzej.me" target="_blank"><span style="color: rgb(235, 146, 39);">Jędrzej Bakalarski</span></a></p>
+    </div>
     <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/setup-scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/shorten-url-scripts.js') }}"></script>
