Add link to download backup of database [5.3.0]

--- a/templates/control-panel.html
+++ b/templates/control-panel.html
@@ -30,6 +30,8 @@
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">Settings</p>
                 </a><a href="/control-panel?section=users" style="color: rgba(13,110,253,0);">
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">Users</p>
+                </a><a href="/control-panel/action?action=download_backup" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Download backup</p>
                 </a>{% endif %}
             </div>{% if not disable_authentication %}
             <div class="col text-end"><a class="btn btn-primary" role="button" id="logout" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
@@ -123,6 +125,8 @@
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">URLs</p>
                 </a><a href="/control-panel?section=users" style="color: rgba(13,110,253,0);">
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">Users</p>
+                </a><a href="/control-panel/action?action=download_backup" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Download backup</p>
                 </a>{% endif %}
             </div>{% if not disable_authentication %}
             <div class="col text-end"><a class="btn btn-primary" role="button" id="logout-2" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
@@ -166,6 +170,8 @@
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">URLs</p>
                 </a><a href="/control-panel?section=settings" style="color: rgba(13,110,253,0);">
                     <p style="color: rgb(255,255,255);margin-bottom: 0;">Settings</p>
+                </a><a href="/control-panel/action?action=download_backup" style="color: rgba(13,110,253,0);">
+                    <p style="color: rgb(255,255,255);margin-bottom: 0;">Download backup</p>
                 </a>{% endif %}
             </div>{% if not disable_authentication %}
             <div class="col text-end"><a class="btn btn-primary" role="button" id="logout-1" style="background: #ff8a00;font-family: 'Roboto';color: rgb(255,255,255);border-style: none;padding-left: 2em;padding-right: 2em;" href="/logout"><strong>Logout</strong></a></div>{% endif %}
