--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
         <div class="container" style="color: rgb(255,255,255);">
             <div class="text-center p-4 p-lg-5">
                 <p class="fw-bold mb-2" style="color: rgb(255,138,0);border-color: #ff8a00;">Login</p>
-                <h1 class="fw-bold mb-4" style="font-family: 'Roboto';">Shorten This</h1>
+                <h1 class="fw-bold mb-4" style="font-family: 'Roboto';">{{ app_name }}</h1>
             </div>
         </div>
     </section><!-- End: Banner Clean -->
