--- a/templates/setup.html
+++ b/templates/setup.html
@@ -18,7 +18,7 @@
         <div class="container" style="color: rgb(255,255,255);">
             <div class="text-center p-4 p-lg-5">
                 <p class="fw-bold mb-2" style="color: rgb(255,138,0);border-color: #ff8a00;">Setup</p>
-                <h1 class="fw-bold mb-4" style="font-family: 'Roboto';">Shorten This</h1>
+                <h1 class="fw-bold mb-4" style="font-family: 'Roboto';">{{ app_name }}</h1>
             </div>
         </div>
     </section><!-- End: Banner Clean -->
@@ -34,10 +34,18 @@
             </div>
             <div style="margin-bottom: 1em;">
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="app-url">App URL</label></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="app-name">App name</label></div>
                 </div>
                 <div class="row">
-                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="text" id="app-url" autocomplete="off" name="app-url" value="{{ app_url }}" required=""></div>
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="text" id="app-name" autocomplete="off" name="app-name" value="Shorten This" required=""></div>
+                </div>
+            </div>
+            <div style="margin-bottom: 1em;">
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><label class="col-form-label text-center" style="color: rgb(255,255,255);font-family: 'Roboto';" for="app-url-1">App URL</label></div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex d-xxl-flex justify-content-center justify-content-xxl-center"><input class="form-control" type="text" id="app-url-1" autocomplete="off" name="app-url" value="{{ app_url }}" required=""></div>
                 </div>
             </div>
             <div style="margin-top: 1em;margin-bottom: 1em;">
